[[bin]]
name = 'dot'
path = 'src/main.rs'

[package]
authors = ['ys']
build = 'build.rs'
edition = '2018'
name = 'dot'
version = '2.0.0'
[profile.release]
panic = 'unwind'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.babe]
path = '../substrate/core/consensus/babe'
package = 'substrate-consensus-babe'

[dependencies.babe-primitives]
path = '../substrate/core/consensus/babe/primitives'
package = 'substrate-consensus-babe-primitives'

[dependencies.basic-authorship]
path = '../substrate/core/basic-authorship'
package = 'substrate-basic-authorship'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
path = '../substrate/core/finality-grandpa'
package = 'substrate-finality-grandpa'

[dependencies.grandpa-primitives]
path = '../substrate/core/finality-grandpa/primitives'
package = 'substrate-finality-grandpa-primitives'

[dependencies.inherents]
path = '../substrate/core/inherents'
package = 'substrate-inherents'

[dependencies.network]
path = '../substrate/core/network'
package = 'substrate-network'

[dependencies.dot-runtime]
path = 'runtime'

[dependencies.primitives]
path = '../substrate/core/primitives'
package = 'substrate-primitives'

[dependencies.sr-io]
path = '../substrate/core/sr-io'

[dependencies.substrate-cli]
path = '../substrate/core/cli'

[dependencies.substrate-client]
path = '../substrate/core/client'

[dependencies.substrate-executor]
path = '../substrate/core/executor'

[dependencies.substrate-service]
path = '../substrate/core/service'

[dependencies.transaction-pool]
path = '../substrate/core/transaction-pool'
package = 'substrate-transaction-pool'

[workspace]
members = ['runtime']

[build-dependencies]
vergen = '3.0.4'
