[[bin]]
name = 'multidao'
path = 'src/main.rs'

[package]
authors = ['ys']
build = 'build.rs'
edition = '2018'
name = 'multidao'
version = '2.0.0'
[profile.release]
panic = 'unwind'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.multidao-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'

[workspace]
members = ['runtime']

[build-dependencies]
vergen = '3.0.4'
