[package]
name = "substrate-subxt"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
derive_more = "0.14.0"
log = "0.4"
futures = "0.1.28"
jsonrpc-core-client = { version = "13.0", features = ["ws"] }
num-traits = { version = "0.2", default-features = false }
parity-scale-codec = { version = "1.0", default-features = false, features = ["derive", "full"] }
runtime_metadata = { path = "../substrate/srml/metadata", package = "srml-metadata" }
runtime_support = { path = "../substrate/srml/support", package = "srml-support" }
runtime_primitives = { path = "../substrate/core/sr-primitives", package = "sr-primitives" }
serde = { version = "1.0", features = ["derive"] }
sr-version = { path = "../substrate/core/sr-version", package = "sr-version" }
srml-system = { path = "../substrate/srml/system", package = "srml-system" }
srml-balances = { path = "../substrate/srml/balances", package = "srml-balances" }
srml-contracts = { path = "../substrate/srml/contracts", package = "srml-contracts" }
srml-indices = { path = "../substrate/srml/indices", package = "srml-indices" }
substrate-rpc-api = { path = "../substrate/core/rpc/api", package = "substrate-rpc-api" }
substrate-rpc-primitives = { path = "../substrate/core/rpc/primitives", package = "substrate-rpc-primitives" }
substrate-primitives = { path = "../substrate/core/primitives", package = "substrate-primitives" }
txpool = {  path = "../substrate/core/transaction-pool/graph", package = "substrate-transaction-graph" }
url = "1.7"

[dev-dependencies]
env_logger = "0.6"
node-runtime = { path = "../substrate/node/runtime", package = "node-runtime" }
substrate-keyring = { path = "../substrate/core/keyring", package = "substrate-keyring" }
tokio = "0.1"
wabt = "0.9.0"
