[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[package]
authors = ['ys']
edition = '2018'
name = 'dot-runtime'
version = '2.0.0'
[dependencies.babe]
default-features = false
path = '../../substrate/srml/babe'
package = 'srml-babe'

[dependencies.babe-primitives]
default-features = false
path = '../../substrate/core/consensus/babe/primitives'
package = 'substrate-consensus-babe-primitives'

[dependencies.balances]
default_features = false
path = '../../substrate/srml/balances'
package = 'srml-balances'

[dependencies.client]
default_features = false
path = '../../substrate/core/client'
package = 'substrate-client'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
path = '../../substrate/srml/executive'
package = 'srml-executive'

[dependencies.grandpa]
default-features = false
path = '../../substrate/srml/grandpa'
package = 'srml-grandpa'

[dependencies.indices]
default_features = false
path = '../../substrate/srml/indices'
package = 'srml-indices'

[dependencies.offchain-primitives]
default-features = false
path = '../../substrate/core/offchain/primitives'
package = 'substrate-offchain-primitives'

[dependencies.primitives]
default_features = false
path = '../../substrate/core/primitives'
package = 'substrate-primitives'

[dependencies.randomness-collective-flip]
default_features = false
path = '../../substrate/srml/randomness-collective-flip'
package = 'srml-randomness-collective-flip'

[dependencies.rstd]
default_features = false
path = '../../substrate/core/sr-std'
package = 'sr-std'

[dependencies.runtime-io]
default_features = false
path = '../../substrate/core/sr-io'
package = 'sr-io'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
path = '../../substrate/core/sr-primitives'

[dependencies.substrate-session]
default-features = false
path = '../../substrate/core/session'

[dependencies.sudo]
default_features = false
path = '../../substrate/srml/sudo'
package = 'srml-sudo'

[dependencies.support]
default_features = false
path = '../../substrate/srml/support'
package = 'srml-support'

[dependencies.system]
default_features = false
path = '../../substrate/srml/system'
package = 'srml-system'

[dependencies.timestamp]
default_features = false
path = '../../substrate/srml/timestamp'
package = 'srml-timestamp'

[dependencies.version]
default_features = false
path = '../../substrate/core/sr-version'
package = 'sr-version'

[features]
default = ['std']
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]
